@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.8
 -----------
 
+2009-09-21:
+- Added bool native_object_base::is_object_native() 
+- bool flusspferd::is_native<T>() no longer throws if an object is not native
+
 2009-09-20:
 - json2.js (http://www.json.org/json2.js) is now loaded to provide an ES5 compatible JSON object for older spidermonkey
 
